--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body{
     background-color: rgb(14, 14, 95);
+    font-family: 'Roboto', sans-serif;
 }
 
 .container{
@@ -16,7 +17,7 @@ body{
 
 /* sezione row */
 
-.row-orrizontale, .row-verticale, .row-orrizontale-2, .row-verticale-2, .row-dado{
+.row-orrizontale, .row-verticale, .row-orrizontale-2, .row-verticale-2, .row-dado, .row-giocatori{
     display: flex;
 }
 
@@ -35,6 +36,11 @@ body{
 .row-dado{
     justify-content: center;
     margin-top: 5rem;
+}
+
+.row-giocatori{
+    margin: 3rem 0rem;
+    justify-content: space-evenly;
 }
 
 /* sezione col */
@@ -89,9 +95,48 @@ body{
 
 /* sezione pedine */
 
-.pedina-uno{
-    width: 5px;
-    height: 5px;
+
+
+.pedina-avanti-uno{
+    background-color: red;
+}
+
+.pedina-indietro-uno{
     background-color: blue;
-    display: block;
+}
+
+.pedina-avanti-due{
+    background-color: rgb(0, 255, 34);
+}
+
+.pedina-indietro-due{
+    background-color: rgb(0, 255, 170);
+}
+
+.winner{
+    background-color: yellow;
+}
+
+.square{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#player-uno{
+    background-color: red;
+}
+
+#player-due{
+    background-color: blue;
+}
+
+#turno{
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    margin: 3rem 0rem;
 }
